--- a/css/main.css
+++ b/css/main.css
@@ -5,34 +5,61 @@ body {
 }
 
 header {
-    background: turquoise;
+    background: lightblue;
+    background-image: url(img/.png);
+    background-size: 100%;
+    background-position: center;
     color: white;
-    padding: 45px 35px 15px 23px;
+    margin: 0px;
+    padding: 20px;
     text-align: left;
 }
 
 header h1 {
-    margin: 0;
-    display: inline;
-    text-align: 
+    font-size: 300%;
+    font-weight: 400;
+    margin: 50px 10px 12px 5px;
 }
+
+#logo {
+    background-size: 50px;
+    background-repeat: no-repeat;
+    display: inline-block;
+    height: 150px;
+    position: relative;
+    text-indent: -9999999px;
+    top: -30p;
+    width: 185px; 
+}
+
+#bgimage {
+    background-size: 10%;
+    background: lightblue;
+    background-image: url(img/backgroundm.png);
+    background-position: center;
+    color: white;
+    margin: 0px;
+    padding: 20px;
+}
+
 nav ul{
     margin: 0;
-    padding: 0 0 0 15px;
-    display: inline;
+    padding: 0;
+    list-style-type:none; 
 }
+
 nav ul li {
-    background:white;
     color: darkturquoise;
     display: inline-block;
     list-style-type: none;
-    padding: 5px 15px;
+    margin: 0 20px 0 0;
+    text-transform: uppercase;
+    
 }
 nav ul li a {
-    color: Black;
+    color: black;
     text-decoration: none;
 }
-
 
 
 h2 {
@@ -45,14 +72,16 @@ a {
     margin: 0;
 }
 p {
-    background: white  ;
+    background: none;
     color: Black;
     padding: 10px 1px 1px 19px;
     margin: 5px;
 }
-.secondary {
-    background: violet;
-    padding: 5px 7ps:
-    color: #777;
-    margin: 0;
+
+.end {
+    background: lightblue;
+    color: Black;
+    padding: 0px;
+    margin: 0px;
 }
+
