--- a/css/main.css
+++ b/css/main.css
@@ -15,12 +15,14 @@ header {
 }
 
 header h1 {
-    font-size: 300%;
-    font-weight: 400;
+    font-size: 210%;
+    font-weight: 1;
     padding: 0px 20px 9px 0px;
     margin: 50px 0px 2px 0px;
     text-align: center;
-    color: aliceblue;
+    color: lightcyan;
+    font-family: 'Roboto Mono', monospace;
+    
 }
 
 #logo {
@@ -30,7 +32,6 @@ header h1 {
     height: 150px;
     position: relative;
     text-indent: -9999999px;
-    top: -30p;
     width: 185px; 
 }
 
@@ -65,7 +66,7 @@ nav ul li a {
 }
 
 .features {
-    margin-bottom: 30px;
+    margin-bottom: px;
     color:white;
     padding: 50px;
     display: flex;
@@ -130,8 +131,9 @@ footer {
 }
 
 .BodyMargins {
-    margin-right: 400px;
-    margin-left: 400px;
+    margin-right: 500px;
+    margin-left: 500px;
+    border: 5px solid darkturquoise;
 }
 
 
