updated project icon

--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ nav .fa-bars
 
 #projects .col-md-4:hover
 {
-    background-color: lightcyan;
+    background-color: #CBFEFB;
 }
 
 #projects .card-img-top
