--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
     position: fixed;
 	width: 100%;
 	height: 100vh;
-	background: white
-	url('https://infolanka.lk/wp-content/themes/infolanka/assests/images/loading.gif')
+	background: #1C273A
+	url('https://i.pinimg.com/originals/a2/dc/96/a2dc9668f2cf170fe3efeb263128b0e7.gif')
 	 no-repeat center center;	
 	z-index: 99999;
 }
